--- a/templates/itemManage.html
+++ b/templates/itemManage.html
@@ -1,5 +1,9 @@
 {% extends "base_admin.html" %}
 
+{% block css %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/admin.css') }}">
+{% endblock %}
+
 {% block script %}
     <script src="/static/js/render_item_info.js"></script>
     <script src="/static/js/reset_item_image.js"></script>
