--- a/templates/buyerItemManage.html
+++ b/templates/buyerItemManage.html
@@ -1,7 +1,7 @@
 {% extends "base_admin.html" %}
 
 {% block css %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/admin.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/buyerItemManage.css') }}">
 {% endblock %}
 
 {% block script %}
