--- a/templates/admin.html
+++ b/templates/admin.html
@@ -11,7 +11,7 @@
 
     window.onload = function (){
         users_box = $(".right-bar")
-        render_users();
+        render_users(admin_phone);
     }
     </script>
 {% endblock %}
