--- a/templates/buyerInfo.html
+++ b/templates/buyerInfo.html
@@ -101,7 +101,7 @@
         </div>
 
         <div class="delete-user-box">
-            <button type="button" class="delete-user-button" onclick="delete_user(phone)">Delete User</button>
+            <button type="button" class="delete-user-button" onclick="delete_user(phone, isAdmin)">Delete User</button>
         </div>
     </div>
 
