--- a/templates/buyerManage.html
+++ b/templates/buyerManage.html
@@ -13,6 +13,7 @@
     <script src="/static/js/reset_user_name.js"></script>
     <script src="/static/js/reset_user_image.js"></script>
     <script src="/static/js/ban_user.js"></script>
+    <script src="/static/js/delete_user.js"></script>
     <script>
     let phone = "{{ phone }}"
     let status;
@@ -67,6 +68,9 @@
             </div>
             <div class="ban-user">
                 <button type="button" id="ban-user-button" onclick="if(!confirm(status)){return;}ban_user(user_type, admin_phone, phone)">Ban User</button>
+            </div>
+            <div class="delete-user">
+                <button type="button" id="delete-user-button" onclick="delete_user(phone, isAdmin)">Delete User</button>
             </div>
         </div>
 
