--- a/static/css/comment.css
+++ b/static/css/comment.css
@@ -89,8 +89,16 @@
 .self-comment-box div {
     margin: 0.5rem 1rem;
     background-color: var(--comment-text-area-bg-color);
-    padding: 0.5rem;
+    /*padding: 0.5rem;*/
     border-radius: var(--comment-text-area-border-radius);
+}
+
+.comment-box div{
+    padding: 0.5rem;
+}
+
+.self-comment-box div{
+    padding: 0.9rem;
 }
 
 
@@ -110,9 +118,10 @@
 
 /* The pattern of the input and textarea of the comment box and self-comment box is the same */
 .self-comment-box input,textarea {
-    width: 90%;
-    font-size: 1.125rem;
-    margin: 1rem 0;
+    width: 100%;
+    height: 100%;
+    font-size: 1.25rem;
+    margin: 0.8rem 0;
     border: rgb(0, 0, 0, 0.0);
     border-radius: 5px;
     background-color: var(--comment-span-bg-color);
@@ -123,6 +132,7 @@
     word-wrap: break-word;
     overflow-wrap: break-word;
     font-family: "Times New Roman", Times, serif;
+    padding: 0 8px;
 }
 
 .self-comment-box input::placeholder{
@@ -133,13 +143,14 @@
     color: var(--text-color);
 }
 
-.self-comment-box input {
-    height: 2rem;
-}
 
-.self-comment-box textarea {
-    height: 5rem;
-}
+/*.self-comment-box input {*/
+/*    height: 2rem;*/
+/*}*/
+
+/*.self-comment-box textarea {*/
+/*    height: 5rem;*/
+/*}*/
 
 /* The pattern of the button of the comment box */
 .self-comment-box button {
